creusot/tests/should_fail/prusti/blocked_lifetime/simple.stderr
error[creusot]: invalid mut dereference of zombie expression with lifetime `'_` in state `'post`
 --> simple.rs:5:12
  |
5 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

